Changed python code

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      FUNCTION_NAME: your-lambda-function-name  # ✅ replace with your Lambda function name
+      FUNCTION_NAME: my-test-lambda 
       HANDLER_FILE: find_nearest_volunteers.py
       PYTHON_VERSION: "3.9"
 
@@ -37,7 +37,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2  # ✅ change this to your region
+        aws-region: us-east-1
 
     - name: Deploy Lambda Code
       run: |
