--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,9 @@ jobs:
           zip -r9 lambda.zip .
         "
 
+    - name: List build directory contents
+      run: ls -lh lambda_build
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
@@ -44,7 +47,8 @@ jobs:
       run: |
         aws lambda update-function-code \
           --function-name "$FUNCTION_NAME" \
-          --zip-file fileb://lambda_function.zip
+          --zip-file fileb://lambda_build/lambda.zip
+
 
     - name: Update Environment Variables
       run: |
