--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,7 +47,7 @@ jobs:
       run: |
         echo "Lambda ZIP present at: lambda_build/lambda.zip"
         aws lambda update-function-code \
-          --function-name "$FUNCTION_NAME" \
+          --function-name "my-test-lambda" \
           --zip-file fileb://lambda_build/lambda.zip
 
     - name: Update Environment Variables
