--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,9 +33,6 @@ jobs:
           zip -r9 lambda.zip .
         "
 
-    - name: List build directory contents
-      run: ls -lh lambda_build
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
@@ -45,9 +42,8 @@ jobs:
 
     - name: Deploy Lambda Code
       run: |
-        echo "Lambda ZIP present at: lambda_build/lambda.zip"
         aws lambda update-function-code \
-          --function-name "my-test-lambda" \
+          --function-name "$FUNCTION_NAME" \
           --zip-file fileb://lambda_build/lambda.zip
 
     - name: Update Environment Variables
