--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,6 +46,12 @@ jobs:
           --function-name "$FUNCTION_NAME" \
           --zip-file fileb://lambda_build/lambda.zip
 
+    - name: Update Lambda Handler
+      run: |
+        aws lambda update-function-configuration \
+          --function-name "$FUNCTION_NAME" \
+          --handler "${HANDLER_FILE%.py}.lambda_handler"
+
     - name: Update Environment Variables (Retry on conflict)
       run: |
         echo "Waiting for Lambda function to be ready for configuration update..."
