--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,6 +48,7 @@ jobs:
 
     - name: Update Lambda Handler
       run: |
+        sleep 10
         aws lambda update-function-configuration \
           --function-name "$FUNCTION_NAME" \
           --handler "${HANDLER_FILE%.py}.lambda_handler"
@@ -55,20 +56,13 @@ jobs:
     - name: Update Environment Variables (Retry on conflict)
       run: |
         echo "Waiting for Lambda function to be ready for configuration update..."
-        RETRIES=6
-        SLEEP=8
-
-        for i in $(seq 1 $RETRIES); do
-          aws lambda update-function-configuration \
-            --function-name "$FUNCTION_NAME" \
-            --environment "Variables={
-              DB_HOST='${{ secrets.DB_HOST }}',
-              DB_PORT='${{ secrets.DB_PORT }}',
-              DB_NAME='${{ secrets.DB_NAME }}',
-              DB_USER='${{ secrets.DB_USER }}',
-              DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
-            }" && break || {
-              echo "Attempt $i failed. Retrying in $SLEEP seconds..."
-              sleep $SLEEP
-            }
-        done
+        sleep 10
+        aws lambda update-function-configuration \
+          --function-name "$FUNCTION_NAME" \
+          --environment "Variables={
+            DB_HOST='${{ secrets.DB_HOST }}',
+            DB_PORT='${{ secrets.DB_PORT }}',
+            DB_NAME='${{ secrets.DB_NAME }}',
+            DB_USER='${{ secrets.DB_USER }}',
+            DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+          }"
