--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,10 +26,10 @@ jobs:
 
         docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2 /bin/bash -c "
           yum update -y &&
-          yum install -y python3 gcc python3-devel zip &&
+          yum install -y python3 gcc postgresql-devel python3-devel zip &&
           pip3 install --upgrade pip &&
           cd /app &&
-          pip3 install pg8000 s2sphere -t . &&
+          pip3 install psycopg2-binary s2sphere -t . &&
           zip -r9 lambda.zip .
         "
 
