--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,16 +23,16 @@ jobs:
       run: |
         mkdir lambda_build
         cp *.py lambda_build/
-
+    
         docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2 /bin/bash -c "
           yum update -y &&
-          yum install -y python3 gcc postgresql-devel python3-devel zip &&
-          pip3 install --upgrade pip &&
+          yum install -y gcc python3 python3-devel postgresql postgresql-devel zip &&
+          python3 -m ensurepip --upgrade &&
+          python3 -m pip install --upgrade pip &&
           cd /app &&
-          pip3 install psycopg2 s2sphere -t . &&
-          zip -r9 lambda.zip .
+          python3 -m pip install psycopg2 s2sphere -t . &&
+          zip -r9 /app/../lambda.zip .
         "
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
