--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,21 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    # - name: Build deployment package with Docker
+    #   run: |
+    #     mkdir lambda_build
+    #     cp *.py lambda_build/
+
+    #     docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2 /bin/bash -c "
+    #       yum update -y &&
+    #       yum install -y gcc python3 python3-devel postgresql postgresql-devel zip &&
+    #       python3 -m ensurepip --upgrade &&
+    #       python3 -m pip install --upgrade pip &&
+    #       cd /app &&
+    #       python3 -m pip install psycopg2 s2sphere -t . &&
+    #       zip -r9 lambda.zip .
+    #     "
+
     - name: Build deployment package with Docker
       run: |
         mkdir lambda_build
@@ -26,12 +41,11 @@ jobs:
 
         docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2 /bin/bash -c "
           yum update -y &&
-          yum install -y gcc python3 python3-devel postgresql postgresql-devel zip &&
-          python3 -m ensurepip --upgrade &&
-          python3 -m pip install --upgrade pip &&
+          yum install -y python3 gcc python3-devel postgresql-devel zip &&
+          pip3 install --upgrade pip &&
           cd /app &&
-          python3 -m pip install psycopg2 s2sphere -t . &&
-          zip -r9 lambda.zip .
+          pip3 install psycopg2-binary s2sphere -t . &&
+          zip -r9 /app/lambda.zip .
         "
 
     - name: Configure AWS credentials
