--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,17 +34,20 @@ jobs:
     #       zip -r9 lambda.zip .
     #     "
 
-    - name: Build deployment package with AWS Lambda base image
+    - name: Build deployment package with Docker
       run: |
         mkdir lambda_build
         cp *.py lambda_build/
   
-        docker run --rm -v "$PWD/lambda_build":/var/task \
-          public.ecr.aws/lambda/python:3.9 /bin/sh -c "
-          yum install -y postgresql-devel gcc python3-devel && \
-          pip3 install psycopg2-binary s2sphere -t . && \
-          zip -r9 /var/task/lambda.zip .
+        docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2 /bin/bash -c "
+          yum install -y gcc python3 python3-devel postgresql-devel zip &&
+          curl -O https://bootstrap.pypa.io/get-pip.py &&
+          python3 get-pip.py &&
+          pip3 install psycopg2-binary s2sphere -t /app &&
+          cd /app &&
+          zip -r9 lambda.zip .
         "
+  
 
     - name: List contents of lambda_build
       run: ls -lh lambda_build
