--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,16 +39,15 @@ jobs:
         mkdir lambda_build
         cp *.py lambda_build/
   
-        docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2 /bin/bash -c "
+        docker run --rm -v "$PWD/lambda_build":/app amazonlinux:2023 /bin/bash -c "
           yum install -y gcc python3 python3-devel postgresql-devel zip &&
-          curl -O https://bootstrap.pypa.io/get-pip.py &&
-          python3 get-pip.py &&
+          python3 -m ensurepip --upgrade &&
+          pip3 install --upgrade pip &&
           pip3 install psycopg2-binary s2sphere -t /app &&
           cd /app &&
           zip -r9 lambda.zip .
         "
   
-
     - name: List contents of lambda_build
       run: ls -lh lambda_build
   
