--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -79,7 +79,7 @@ jobs:
         --function-name "$FUNCTION_NAME" \
         --environment "Variables={
           DB_HOST='${{ secrets.DB_HOST }}',
-          DB_PORT='${{ secrets.DB_PORT }}'
+          DB_PORT='${{ secrets.DB_PORT }}',
           DB_NAME='${{ secrets.DB_NAME }}',
           DB_USER='${{ secrets.DB_USER }}',
           DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
